epargneplus web app

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         </intent>
     </queries>
    <application
-        android:label="228SportZ"
+        android:label="Epargne+"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
